# PyAuth

./: .gitignore  LICENSE  README.md  __init__.py  cookies.txt  pyproject.toml
adapters/: base.py  sqlalchemy.py
core/: __init__.py  auth.py  config.py  errors.py  mailer.py  session.py  types.py
docs/reference/: phase-3-auth-strategies.md
examples/: README.md  fastapi_sqlalchemy_app.py
framework/: __init__.py  base.py  fastapi.py  request.py  router.py  schemas.py
providers/: base.py  credentials.py  github.py  google.py
pyauth/: __init__.py
pyauth/core/: __init__.py  auth.py  config.py  mailer.py
pyauth/framework/: __init__.py
schema/: models.py
tests/: test_package_imports.py
tests/adapters/: test_base.py  test_sqlalchemy.py
tests/core/: test_auth.py  test_config.py  test_errors.py  test_mailer.py  test_session.py
tests/framework/: test_fastapi.py
tests/integration/: test_auth_flows.py
tests/providers/: test_credentials.py  test_github.py  test_google.py
tests/schema/: test_models.py
tests/utils/: test_crypto.py
utils/: __init__.py  crypto.py  mailer.py
