[project]
name = "pyauth"
version = "0.1.0"
description = "Authentication library for Python"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "cryptography>=46.0.5",
    "joserfc>=1.6.3",
    "pwdlib[argon2]>=0.3.0",
    "argon2-cffi>=25.1.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.135.1",
]
sqlalchemy = [
    "sqlalchemy>=2.0.48",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
